Add selt test binary sensor.

--- a/custom_components/dlms_cosem/translations/ru.json
+++ b/custom_components/dlms_cosem/translations/ru.json
@@ -23,6 +23,11 @@
     }
   },
   "entity": {
+    "binary_sensor": {
+      "self_test": {
+        "name": "Самодиагностика"
+      }
+    },
     "sensor": {
       "active_energy_tariff1": {
         "name": "Электроэнергия (тариф 1)"
