Add error code state attribute.

--- a/custom_components/dlms_cosem/translations/ru.json
+++ b/custom_components/dlms_cosem/translations/ru.json
@@ -26,6 +26,11 @@
     "binary_sensor": {
       "self_test": {
         "name": "Самодиагностика"
+      },
+      "state_attributes": {
+        "error_code": {
+          "name": "Код ошибки"
+        }
       }
     },
     "sensor": {
