--- a/custom_components/dlms_cosem/translations/ru.json
+++ b/custom_components/dlms_cosem/translations/ru.json
@@ -25,11 +25,11 @@
   "entity": {
     "binary_sensor": {
       "self_test": {
-        "name": "Самодиагностика"
-      },
-      "state_attributes": {
-        "error_code": {
-          "name": "Код ошибки"
+        "name": "Самодиагностика",
+        "state_attributes": {
+          "error_code": {
+            "name": "Код ошибки"
+          }
         }
       }
     },
